# ubt-ros2-learning

./: README.md  demo_composition.sh  frames_2026-06-17_17.22.22.gv  run_marker_demo.sh  test_component.sh  test_launch.sh
launch/: turtlesim_mimic_launch.py  turtlesim_mimic_launch.xml  turtlesim_mimic_launch.yaml
src/: README.md  fastdds_profiles.xml
src/action_tutorials_interfaces/: CMakeLists.txt  README.md  package.xml
src/action_tutorials_interfaces/action/: Fibonacci.action
src/action_tutorials_py/: README.md  package.xml  setup.py
src/action_tutorials_py/action_tutorials_py/: fibonacci_action_client.py  fibonacci_action_server.py
src/allocator_demo/: CMakeLists.txt  package.xml
src/allocator_demo/src/: allocator_demo.cpp
src/bag_reader_demo/: CMakeLists.txt  package.xml
src/bag_reader_demo/src/: bag_reader.cpp
src/bag_recorder_demo/: CMakeLists.txt  package.xml
src/bag_recorder_demo/src/: bag_recorder.cpp
src/bag_recorder_py/: package.xml  setup.py
src/bag_recorder_py/bag_recorder_py/: bag_recorder_py.py
src/composition_demo/: CMakeLists.txt  README.md  package.xml
src/composition_demo/launch/: composition_demo.launch.py
src/composition_demo/src/: listener_component.cpp  talker_component.cpp
src/cpp_parameter_event_handler/: CMakeLists.txt  README.md  package.xml
src/cpp_parameter_event_handler/src/: parameter_event_handler.cpp
src/cpp_pubsub/: CMakeLists.txt  README.md  package.xml
src/cpp_pubsub/src/: publisher.cpp  subscriber.cpp  subscriber_with_stats.cpp
src/launch_tutorial/: README.md  package.xml  setup.py
src/launch_tutorial/config/: turtlesim.yaml
src/launch_tutorial/launch/: broadcaster_listener_launch.py  example_event_handlers.launch.py  example_main.launch.py  example_substitutions.launch.py  fixed_broadcaster_launch.py  launch_turtlesim_launch.py  mimic_launch.py  turtlesim_rviz_launch.py  turtlesim_world_1_launch.py  turtlesim_world_2_launch.py  turtlesim_world_3_launch.py
src/learning_tf2_cpp/: CMakeLists.txt  README.md  package.xml
src/learning_tf2_cpp/src/: frame_tf2_broadcaster.cpp  static_turtle_tf2_broadcaster.cpp  turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
src/learning_tf2_py/: README.md  package.xml  setup.py
src/learning_tf2_py/launch/: turtle_tf2_demo_launch.py  turtle_tf2_dynamic_frame_demo_launch.py  turtle_tf2_fixed_frame_demo_launch.py
src/learning_tf2_py/learning_tf2_py/: dynamic_frame_tf2_broadcaster.py  fixed_frame_tf2_broadcaster.py  static_turtle_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
src/marker_display_types_tutorial/: CMakeLists.txt  package.xml
src/marker_display_types_tutorial/src/: all_markers_demo.cpp
src/more_interfaces/: CMakeLists.txt  README.md  package.xml
src/more_interfaces/src/: publish_address_book.cpp
src/my_package/: README.md  package.xml  setup.py
src/my_robot_urdf/launch/: gazebo.launch.py
src/my_robot_urdf/urdf/: 02-multipleshapes.urdf  03-origins.urdf  04-materials.urdf  05-visual.urdf  06-flexible.urdf  07-physics.urdf  08-macroed.urdf.xacro  09-gazebo.urdf.xacro
src/node_interfaces_tutorial/: CMakeLists.txt  README.md  package.xml
src/node_interfaces_tutorial/src/: node_interfaces_example.cpp  node_interfaces_template_example.cpp
src/points_and_lines_tutorial/: CMakeLists.txt  package.xml
src/points_and_lines_tutorial/src/: points_and_lines.cpp
src/py_pubsub/: README.md  package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/py_srvcli/: README.md  package.xml  setup.py
src/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
src/python_parameters/: README.md  package.xml  setup.py
src/rqt_bag_diagnostics_demo/: package.xml  plugins.xml  setup.cfg  setup.py
src/rqt_bag_diagnostics_demo/rqt_bag_diagnostics_demo/: diagnostic_pub.py  the_plugin.py
src/rviz_panel_tutorial/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_panel_tutorial/include/rviz_panel_tutorial/: demo_panel.hpp
src/rviz_panel_tutorial/src/: demo_panel.cpp
src/rviz_plugin_tutorial/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_plugin_tutorial/include/rviz_plugin_tutorial/: point_display.hpp
src/rviz_plugin_tutorial/src/: point_display.cpp
src/rviz_plugin_tutorial_msgs/: CMakeLists.txt  package.xml
src/rviz_plugin_tutorial_msgs/msg/: Point2D.msg
src/second_robot/: package.xml  setup.cfg  setup.py
src/second_robot/launch/: rsp.launch.py
src/second_robot/rviz/: my_robot.rviz
src/second_robot/urdf/: my_robot.urdf
src/tutorial_interfaces/: CMakeLists.txt  README.md  package.xml
src/urdf_tutorial_cpp/: CMakeLists.txt  package.xml
src/urdf_tutorial_cpp/launch/: launch.py
src/urdf_tutorial_cpp/src/: urdf_tutorial.cpp
src/urdf_tutorial_cpp/urdf/: r2d2.rviz  r2d2.urdf.xml
src/visualization_marker_tutorials/: CMakeLists.txt  package.xml
src/visualization_marker_tutorials/src/: basic_shapes.cpp
