<?xml version="1.0"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>Pubsub using custom interface</description>
  <maintainer email="ubt@todo.todo">ubt</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tutorial_interfaces</depend>
</package>
