<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_bag_diagnostics_demo</name>
  <version>0.0.0</version>
  <description>rqt_bag plugin for diagnostics_msgs</description>
  <maintainer email="2950317571@qq.com">ubt</maintainer>
  <license>Apache-2.0</license>

  <depend>diagnostic_msgs</depend>
  <depend>python_qt_binding</depend>
  <depend>rqt_bag</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_bag plugin="${prefix}/plugins.xml"/>
  </export>
</package>
